# EIC-Compton-Generator

./: Makefile  Makefile.in  README.md  configure.ac  generator.cc
include/: FontColor.hh  Generator.hh
src/: Generator.cc
